--- a/header/header.css
+++ b/header/header.css
@@ -1,47 +1,111 @@
-.header-bg {
-    height: auto;
-    width: 100%;
-    background: #000;
+body {
+    overflow-x: hidden;
+}
+
+a {
     color: #fff;
-    font-size: 1.5rem;
-    font-family: 'Lato', sans-serif;
-}
-
-.box-navbar {
-    display: flex;
-    justify-content: space-between;
-}
-
-.navbar-content {
-    display: flex;
-    gap: 20px;
-}
-
-.navbar-content  a {
-    color: white;
     text-decoration: none;
-    font-weight: bolder;
+    transition: 0.3s;
+    text-transform: lowercase;
 }
-
-.navbar-content  a:hover {
-    transition: 0.5s;
-    color: #87A96B;
+a:hover {
+    transition: 0.3s;
+    color: #87A96B;;
+  }
+  
+.logo {
+    font-size: 24px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
 }
-
-.navbar-menu {
+  
+nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-family: 'Lato', sans-serif;
+    background: #111;
+    height: 8vh;
+}
+  
+.nav-list {
     list-style: none;
-    padding: 15px 30px;
+    display: flex;
+    z-index: 999;
 }
-
-@media (max-width: 700px) {
-    .navbar-menu {
-        font-size: 1rem;
+  
+.nav-list li {
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    margin-left: 32px;
+}
+  
+.mobile-menu {
+    display: none;
+    cursor: pointer;
+}
+  
+.mobile-menu div {
+    width: 32px;
+    height: 2px;
+    background: #fff;
+    margin: 8px;
+    transition: 0.3s;
+}
+  
+@media (max-width: 999px) {
+    body {
+      overflow-x: hidden;
     }
-}
 
-@media (max-width: 500px) {
-    .navbar-menu {
-        font-size: 0.6rem;
-        padding: 10px 20px;
+    .nav-list {
+      text-transform: uppercase;  
+      font-weight: bold;
+      position: absolute;
+      top: 8vh;
+      right: 0;
+      width: 50vw;
+      height: 95vh;
+      background: #111;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-around;
+      transform: translateX(100%);
+      transition: transform 0.3s ease-in;
     }
-}
+    .nav-list li {
+      margin-left: 0;
+      opacity: 0;
+    }
+    .mobile-menu {
+      display: block;
+    }
+  }
+  
+  .nav-list.active {
+    transform: translateX(0);
+    z-index: 999;
+  }
+  
+  @keyframes navLinkFade {
+    from {
+      opacity: 0;
+      transform: translateX(50px);
+    }
+    to {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
+  
+  .mobile-menu.active .line1 {
+    transform: rotate(-45deg) translate(-8px, 8px);
+  }
+  
+  .mobile-menu.active .line2 {
+    opacity: 0;
+  }
+  
+  .mobile-menu.active .line3 {
+    transform: rotate(45deg) translate(-5px, -7px);
+  }
