--- a/header/header.css
+++ b/header/header.css
@@ -2,15 +2,15 @@ body {
     overflow-x: hidden;
 }
 
-a {
+header a {
     color: #fff;
     text-decoration: none;
     transition: 0.3s;
-    text-transform: lowercase;
+    text-transform: uppercase;
 }
 a:hover {
     transition: 0.3s;
-    color: #87A96B;;
+    color: springgreen;
   }
   
 .logo {
@@ -57,7 +57,6 @@ nav {
     body {
       overflow-x: hidden;
     }
-
     .nav-list {
       text-transform: uppercase;  
       font-weight: bold;
