--- a/section-perso/perso.css
+++ b/section-perso/perso.css
@@ -46,7 +46,7 @@ img {
 
 .perso2 h2 {
     text-transform: uppercase;
-    color: #87A96B;
+    color: springgreen;
 }
 
 .perso2 p {
@@ -59,14 +59,14 @@ img {
     color: #111;
     padding: 5px;
     text-decoration: none;
-    border: 1px solid #87A96B;
+    border: 1px solid springgreen;
     display: inline-block;
     font-weight: bold;
 }
 
 .btn-perso:hover {
     transition: 0.5s;
-    background-color: #87A96B;
+    background-color: springgreen;
     color: #fff;
 }
 
@@ -78,7 +78,7 @@ img {
 
 @media (max-width: 500px) {
     .perso-box {
-        gap: 15px;
+        gap: 0px;
     }
     .perso2,.btn-perso h2,p {
         margin-left: 1rem;
