--- a/section-services/services.css
+++ b/section-services/services.css
@@ -16,7 +16,7 @@
     width: 400px;
     height: auto;
     background-color: #fff;
-    border: 1px solid #87A96B;
+    border: 1px solid springgreen;
 }
 
 .services-text h2 {
@@ -33,13 +33,13 @@
     color: #111;
     padding: 5px;
     text-decoration: none;
-    border: 1px solid #87A96B;
+    border: 1px solid springgreen;
     display: inline-block;
 }
 
 .btn:hover {
     transition: 0.5s;
-    background: #87A96B;
+    background: springgreen;
     color: #fff;
 }
 
@@ -52,5 +52,6 @@
 @media (max-width: 500px) {
     .services-text {
         width: 300px;
+        border: 1px solid springgreen;
     }
 }
