--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
 @import url(section-prices/prices.css);
 @import url(footer/footer.css);
 @import url(slides/slides.css);
+@import url(contact/contact.css);
 
 * {
     margin: 0;
@@ -22,8 +23,4 @@
 
 html {
     scroll-behavior: smooth;
-}
-
-body {
-    overflow-x: hidden;
 }
