--- a/slides/slides.css
+++ b/slides/slides.css
@@ -1,25 +1,50 @@
-.slides-bg {
+:root {
+    --swiper-theme-color: #00ff7f;
+}
+ 
+ .slides-bg {
     height: 600px;
     width: 100%;
+    overflow-x: hidden;
 }
 
-swiper-container {
+ .swiper-container {
     width: 100%;
     height: 100%;
 }
 
-swiper-slide {
+.swiper-slide {
     text-align: center;
     font-size: 18px;
     background: #fff;
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
     align-items: center;
 }
 
-swiper-slide img {
+.swiper-slide img {
     display: block;
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.swiper-button-prev, .swiper-button-next {
+    display: none;
+}
+
+.swiper-horizontal>.swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal, .swiper-pagination-custom, .swiper-pagination-fraction {
+    position: absolute;
+    bottom: auto;
+    margin-top: 6px;
 }
