--- a/slides/slides.css
+++ b/slides/slides.css
@@ -48,3 +48,12 @@
     bottom: auto;
     margin-top: 6px;
 }
+
+@media (max-width: 500px) {
+    .slides-bg {
+        height: auto;
+    }
+    .swiper-slide img {
+        object-fit: contain;
+    }
+}
