--- a/style.css
+++ b/style.css
@@ -2,18 +2,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
 /* css */
-@import url(header/header.css);
-@import url(main/main.css);
-@import url(section-about/about.css);
-@import url(section-services/services.css);
-@import url(section-perso/perso.css);
-@import url(section-box-club/box-club.css);
-@import url(section-boxing/boxing.css);
-@import url(section-cite/cite.css);
-@import url(section-prices/prices.css);
-@import url(footer/footer.css);
-@import url(slides/slides.css);
-@import url(contact/contact.css);
+@import url(css/header/header.css);
+@import url(css/main/main.css);
+@import url(css/section-about/about.css);
+@import url(css/section-services/services.css);
+@import url(css/section-perso/perso.css);
+@import url(css/section-box-club/box-club.css);
+@import url(css/section-boxing/boxing.css);
+@import url(css/section-cite/cite.css);
+@import url(css/section-prices/prices.css);
+@import url(css/footer/footer.css);
+@import url(css/slides/slides.css);
+@import url(css/contact/contact.css);
 
 * {
     margin: 0;
