--- a/css/main/main.css
+++ b/css/main/main.css
@@ -1,7 +1,7 @@
 .main-bg {
     height: 95vh;
     width: 100%;
-    background-image: url(../img/background.jpg);
+    background-image: url(../../img/background.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
