--- a/css/section-prices/prices.css
+++ b/css/section-prices/prices.css
@@ -25,8 +25,19 @@
     width: 400px;
     border: 3px solid #111;
     border-radius: 8px;
-    background: #111;
-    color: #fff;
+    background: #fff;
+    color: #111;
+    opacity: 0.9;
+}
+
+.prices-text:hover {
+    transition: 0.3s;
+    opacity: 1;
+}
+
+.prices-text h4 {
+    margin-bottom: 1rem;
+    text-transform: uppercase;
 }
 
 .prices-text h3 {
@@ -38,8 +49,8 @@
 .btn-prices {
     margin-top: 2rem;
     margin-bottom: 2rem;
-    color: #111;
-    background: #fff;
+    color: #fff;
+    background: #111;
     padding: 5px;
     text-decoration: none;
     border: 2px solid #fff;
@@ -53,7 +64,7 @@
 .btn-prices:hover {
     transition: 0.5s;
     background: #fff;
-    border: 1px solid #111;
+    border: 2px solid #111;
     color: #111;
 }
 
