style: color, fix: positions

--- a/css/section-boxing/boxing.css
+++ b/css/section-boxing/boxing.css
@@ -31,7 +31,7 @@ img {
     margin-top: 2rem;
     margin-bottom: 2rem;
     padding: 15px 30px;
-    background: springgreen;
+    background: #00A196;
     color: #fff;
     width: 250px;
     height: auto;
