--- a/css/contact/contact.css
+++ b/css/contact/contact.css
@@ -10,6 +10,7 @@
     margin-top: 1rem;
     margin-bottom: 1rem;
     text-align: center;
+    text-transform: uppercase;
     font-size: 5rem;
 }
 
@@ -40,5 +41,11 @@ i {
 @media (max-width: 820px) {
     .map-box {
         flex-wrap: wrap;
+    }
+}
+
+@media (max-width: 500px) {
+    .contact-bg h1 {
+        font-size: 2.5rem;
     }
 }
