--- a/css/header/header.css
+++ b/css/header/header.css
@@ -6,7 +6,7 @@ header a {
 }
 a:hover {
     transition: 0.5s;
-    color: springgreen;
+    color: #00A196;
   }
   
 .logo {
@@ -57,7 +57,7 @@ nav {
       top: 8vh;
       right: 0;
       width: 50vw;
-      height: 95vh;
+      height: 80vh;
       background: #111;
       flex-direction: column;
       align-items: center;
