--- a/css/main/main.css
+++ b/css/main/main.css
@@ -1,8 +1,8 @@
 .main-bg {
-    height: 95vh;
+    height: 80vh;
     width: 100%;
     background-image: url(../../img/background.jpg);
-    background-position: center;
+    background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -10,18 +10,20 @@
 .main-bg h1 {
     font-family: 'Lato', sans-serif;
     font-size: 5rem;
+    padding-left: 5%;
+    padding-right: 5%;
     text-transform: uppercase;
     text-align: center;
     color: #fff;
     text-shadow: 2px 2px 5px black;
     position: relative;
-    top: 35%;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 @media (max-width: 650px) {
     .main-bg h1 {
-        top: 20%;
-        font-size: 4rem;
+        font-size: 3rem;
     }
 }
 
