--- a/css/section-perso/perso.css
+++ b/css/section-perso/perso.css
@@ -7,7 +7,7 @@
 
 .perso-box {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     gap: 60px;
 }
 
@@ -46,7 +46,7 @@ img {
 
 .perso2 h2 {
     text-transform: uppercase;
-    color: springgreen;
+    color: #00A196;
 }
 
 .perso2 p {
@@ -59,20 +59,21 @@ img {
     color: #111;
     padding: 5px;
     text-decoration: none;
-    border: 1px solid springgreen;
+    border: 1px solid #00A196;
     display: inline-block;
     font-weight: bold;
 }
 
 .btn-perso:hover {
     transition: 0.5s;
-    background-color: springgreen;
+    background-color: #00A196;
     color: #fff;
 }
 
 @media (max-width: 820px) {
     .perso-box {
         flex-wrap: wrap;
+        gap: 0;
     }
 }
 
@@ -82,6 +83,7 @@ img {
     }
     .perso2,.btn-perso h2,p {
         margin-left: 1rem;
+        margin-right: 1rem;
     }
 
     .img2 {
