--- a/css/section-prices/prices.css
+++ b/css/section-prices/prices.css
@@ -6,6 +6,7 @@
 
 .prices-tittle {
     font-size: 4rem;
+    text-transform: uppercase;
     margin-top: 2rem;
     margin-bottom: 2rem;
     text-align: center;
@@ -95,7 +96,16 @@
     color: gold;
 }
 
+@media (max-width: 600px) {
+    .prices-tittle {
+        font-size: 2.5rem;
+    }
+}
+
 @media (max-width: 500px) {
+    .prices-tittle {
+        font-size: 2.5rem;
+    }
     .prices-text {
         width: 300px;
     }
